--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
         <h3>A digital framework for multi-lateral collaboration</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>Between 1500 and 1800, a revolution in postal communication allowed ordinary men and women to scatter letters across and beyond Europe. This exchange helped knit together what contemporaries called the respublica litteraria, a knowledge-based civil society, crucial to that era’s intellectual breakthroughs, and formative of many modern European values and institutions.</p><p>Ironically, the exchange of letters which created this community also dispersed the documentation required to study it, posing enormous difficulties for historians of the subject ever since.</p><p>To reassemble that scattered material and chart the history of that imagined community we need a revolution in digital communications.</p><p>This COST Action is dedicated to envisaging the open-access, open-source, transnational digital infrastructure capable of facilitating the radically multilateral collaboration needed to reassemble this scattered documentation and to support a new generation of scholarly methods and research questions.</p>
@@ -40,7 +40,7 @@
         <h3>A Network of Researchers</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p><b>COST Action IS1310 Reassembling the Republic of Letters, 1500–1800</b> is therefore essentially a networking programme. It emerged in response to the expectation that that the ongoing revolution in digital communications technology can solve the scholarly problem created by the evolution of postal communication in the early modern period, thanks to the contribution of various sholars and researchers spread in different research groups.</p>
@@ -52,10 +52,10 @@
     <div class="network-stage">
       
       <div class="row vertical-centered">   
-        <div class="net-img-container col-sm-8">
+        <div class="net-img-container col-xs-12 col-sm-8">
           <img src="images/geographical-extent.png" class="img-responsive">
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-12 col-sm-4">
           <div class="net-stage">
             <h4>2.1 Research at National Level</h4>
             <h4>–</h4>
@@ -65,14 +65,14 @@
       </div>
 
       <div class="row vertical-centered">   
-        <div class="net-img-container col-sm-8">
+        <div class="net-img-container col-xs-12 col-sm-8">
           <img class="img-responsive" src="images/stsm-network.png">
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-12 col-sm-4">
           <div class="net-stage">
             <h4>2.2 Fostering Collaboration</h4>
             <h4>–</h4>
-            <p class="description">Network of STSM</p>
+            <p class="description">Thanks to a particular form of grant called STSM (Short Term Scientific Missions) people had been able of meet with the aim of lead very specific projects.<br/>In the network, nodes are representing COST-involved nations. Edges are directional, meaning one or more people travelled from a country to a hosting one, while the size is representative of the sum of in-going and out-going connection every nation assists.<br/>As it is possible to deduce from the image, not all the nations have been involved (as a hosting one or not) in an STSM.</p>
           </div>     
         </div>
       </div>
@@ -103,52 +103,80 @@
         <h3>FOUR COMMUNITIES</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>In order to uderstand how to outline those digital tools described before, it is better, if not necessary, to gather a wide amount of specific knowledges which are nowadays scattered across a number of different skills of various field of study: since there is data to be managed, some technical capability has to be emplyed, since interfaces have to be designed and built, some method has to be called in action. The understanding of humanistic matter is nonetheless fundamental.</p><p>The challenge of this particular programme is then to coordinate them all in order to obtain the best collaboration results as possible.</p>
       </div>
     </div>
        
-    <div class="row dendogram-stage">
+    <div class="row dendogram-stage" style="border:0px solid black">
       
       <div class="chart-container col-sm-9">
-        <div class="stiky-container communities-dendogram" sticky offset="{{offset}}" usePlaceholder="true" confine="true">
+        <div class="stiky-container communities-dendogram" xxxsticky xxxoffset="{{offset}}" xxxusePlaceholder="false" xxxconfine="true">
           <!-- svg is created inside here by directive "dendogram-people" -->
         </div>
       </div> <!-- Close col-sm-8 -->
 
       <div class="col-sm-3">
         <!-- <div class="room h50vh"></div> -->
-        <div id="ds1" class="dend-stage" scroll-trigger="animateDendogram('ds1')" stage="3-1">
+        <div xxxid="ds1" class="dend-stage" xxxscroll-trigger="animateDendogram('ds1')">
           <h4>Four Communities</h4>
           <h4>–</h4>
           <p class="description">The interdisciplinarity breath of this organization is based on four different communities, within them is possible to recognize all fundamentals that are needed in order to comply to the aim of the Action.</p>
           <legend-communities></legend-communities>
         </div>
         <!-- <div class="room h50vh"></div> -->
-        <div id="ds2" class="dend-stage" scroll-trigger="animateDendogram('ds2')" stage="3-2">
+        <!-- <div id="ds2" class="dend-stage" scroll-trigger="animateDendogram('ds2')">
+          <h4>Involved People</h4>
+          <h4>–</h4>
+          <p class="description">A total number of <b>164</b> people are invoved. The chart represents them divided into their belonging communities, which are the ones saw before.<br/>About three out of four people are scholars, experts in humanistic matters, while the rest of the  group is represented by Archivist, Librarians, Digital Humanist, Designers and Computer Scientist. The role of these people is to support the scholars in expressing needs and, together, to envision how to add value to their work.</p>
+          <legend-communities></legend-communities>
+        </div> -->
+        <!-- <div class="room h50vh"></div> -->
+      </div> <!-- Close col-sm-4 -->
+
+    </div> <!-- Close Row, dendogram-stage -->
+
+    <div class="row dendogram-stage" style="border:0px solid black">
+      
+      <div class="col-sm-9 communities-dendogram-extended"></div>
+
+      <div class="col-sm-3">
+        <div class="dend-stage">
           <h4>Involved People</h4>
           <h4>–</h4>
           <p class="description">A total number of <b>164</b> people are invoved. The chart represents them divided into their belonging communities, which are the ones saw before.<br/>About three out of four people are scholars, experts in humanistic matters, while the rest of the  group is represented by Archivist, Librarians, Digital Humanist, Designers and Computer Scientist. The role of these people is to support the scholars in expressing needs and, together, to envision how to add value to their work.</p>
           <legend-communities></legend-communities>
         </div>
-        <!-- <div class="room h50vh"></div> -->
-      </div> <!-- Close col-sm-4 -->
-
-    </div> <!-- Close Row, dendogram-stage -->
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h3>Working Groups Composition</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>In order to uderstand how to outline those digital tools described before, it is better, if not necessary, to gather a wide amount of specific knowledges which are nowadays scattered across a number of different skills of various field of study: since there is data to be managed, some technical capability has to be emplyed, since interfaces have to be designed and built, some method has to be called in action. The understanding of humanistic matter is nonetheless fundamental.</p><p>The challenge of this particular programme is then to coordinate them all in order to obtain the best collaboration results as possible.</p>
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="row dendogram-wg-stage">
       <div class="chart-container col-sm-9">
@@ -228,7 +256,7 @@
         <h3>~</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>Studying the letters within the archives, a set of information have been carefully collected and some data has been produced, data that comprehend details such as date, sender, recipient, destination, origin, etc.</p>
@@ -243,7 +271,7 @@
         <h3>A Misleading Visualisation</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
         <p> </p>
@@ -251,7 +279,7 @@
     </div>
   </div>
 
-  <map-emlo style="width: 100%;"></map-emlo>
+  <map-emlo style="width: 100%;height:768px"></map-emlo>
 
   <div class="container"> 
     <div class="row">
@@ -280,14 +308,14 @@
         <h3>A VISUALISATION FOR INFERENCE</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>Because of the issues explained above, and even if a number of inconsistences are present and is not possible represent all the letters in an “equal” way or in the same view, some overview visualisation could still be remarkable for gaining some general insight.</p>
       </div>
     </div>
   </div>
-  <linechart-letter-distribution  style="width: 100%;"></linechart-letter-distribution>
+  <linechart-letter-distribution  style="width: 100%;height:800px;"></linechart-letter-distribution>
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
@@ -319,12 +347,12 @@
         <h3>[Text.]</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>The activities funded by COST also include Workshops held at irregular intervals depending on need, Training Schools designed to induct younger scholars into the techniques and methods being pioneered by the group, and Short Term Scientific Missions (STSMs), which fund international exchange visits within the network likewise targeted at colleagues in early career.</p>
         <img class="img-responsive" src="images/events-details.svg" style="width: 367px; margin: auto; margin-top: 60px; margin-bottom: 50px;" />
-        <p>Grey markers represents places where different kind of events took place, not necessarily overlapping each others (e.g. Oxford: a conference, a training school and various meetings).<br/>Markers with the “plus” symbol indicate places where more than 9 activities took place (only United Kingdom).</p>
+        <p><span style="font-weight:bold;">NB</span>: <span style="color:#63b6e5;font-weight:bold;">Light blue markers</span> represents places where different kind of events took place, not necessarily overlapping each others (e.g. a conference, a training school and various meetings). <span style="color:#4d4d4d;font-weight:bold;">Markers with the “plus” sign</span> indicate places where more than 9 activities took place (only United Kingdom).</p>
       </div>
       <div class="clearfix"></div>
     </div>
@@ -347,7 +375,7 @@
         <h3>~</h3>
       </div>
       <div class="clearfix"></div>
-      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>Whether you want to discover more about the work done by the COST Action "Reassembling the Republic of Letters" and know more about the upcoming and past events, or you are interest in knowing how to take part, please visit our website.</p>
