--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -125,7 +125,7 @@ section:nth-child(1) {
 
   .level1 {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     display: block;
     position: absolute;
     top: 0;
@@ -137,7 +137,7 @@ section:nth-child(1) {
 
   .level2 {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     display: block;
     position: absolute;
     top: 0;
@@ -268,11 +268,6 @@ margin-bottom: 32px;
   color: $orange;
 }
 
-.vertical-centered {
-  display: flex;
-  align-items: center;
-}
-
 #letters-map {
   border: 12px solid $lightGrey;
   box-sizing: border-box;
@@ -324,8 +319,17 @@ margin-bottom: 32px;
 .network-stage {
 }
 
-.dendogram-stage, .dendogram-wg-stage {
+.stiky-container {
+  border: 1px solid white;
+}
+
+.dendogram-stage {
   display: flex;
+  align-items: center;
+}
+
+.dendogram-wg-stage {
+  display: block;
   margin-top: 80px;
   margin-bottom: 80px;
 }
@@ -337,8 +341,8 @@ margin-bottom: 32px;
 }
 
 .dend-stage {
-  opacity: 0.5;
-  transition: all 0s;
+  // opacity: 0.5;
+  // transition: all 0s;
   // margin-top: 0;
   // margin-bottom: 0px;
 }
@@ -349,11 +353,11 @@ margin-bottom: 32px;
 }
 
 .dend-stage {
-  margin-top: 50vh;
+  // margin-top: 50vh;
 }
 
 .dend-stage:last-of-type, .dend-two-stage:last-of-type {
-  margin: 50vh auto;
+  // margin: 50vh auto;
 }
 
 .net-stage.focus, .dend-stage.focus {
@@ -367,6 +371,7 @@ margin-bottom: 32px;
   margin-bottom: 24px;
   max-height: 70vh;
   max-width: 100%;
+  background-color: white;
 }
 
 .chart-container {
@@ -384,7 +389,7 @@ margin-bottom: 32px;
   margin-bottom:10vh;
 }
 
-#dendogram, #dendogram2 {
+#dendogram, #dendogram2, #dendogram-extended {
   border: none;
   margin:auto;
   // margin-top: 24px;
@@ -396,7 +401,10 @@ margin-bottom: 32px;
   width: 100%;
   height: 100%;
   max-height: 90vh;
-  transition: all 0.5s;
+  transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  -o-transition: transform 0.5s;
 }
 
 .room.h50vh {
@@ -448,7 +456,7 @@ margin-bottom: 32px;
 }
 
 .node {
-  font: 8px $sans;
+  font: 7px $sans;
   fill: $veryDarkBlue;
   cursor: pointer;
 }
@@ -590,8 +598,9 @@ map-emlo {
   }
   path {
     fill: none;
-    stroke-width: 1.5px;
-    stroke: $orange;
+    stroke-width: 1.0px;
+    // stroke: $orange;
+    stroke: $veryDarkBlue;
     stroke-opacity: 0.8;
     shape-rendering:auto;
   }
@@ -725,6 +734,13 @@ $screen-lg-min: 1200px;
   // .navbar-collapse {
   //   background-color: red;
   // }
+  .vertical-centered {
+    display: flex;
+    align-items: center;
+  }
+  .dendogram-stage, .dendogram-wg-stage {
+    display: flex;
+  }
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -738,7 +754,7 @@ $screen-lg-min: 1200px;
     margin-top: 24px;
     margin-bottom: 24px;
     max-height: 70vh;
-    max-width: 70vh;
+    max-width: 100%;
   }
   p {
     margin: 24px 0;
@@ -770,6 +786,9 @@ $screen-lg-min: 1200px;
       width: 350px;
       background-size: 100% 100%;
     }  
+  }
+  .node {
+    font: 8px $sans;
   }
   legend-communities {
     p {
@@ -804,6 +823,9 @@ $screen-lg-min: 1200px;
       width: 450px;
       background-size: 450px 450px;
     }
+  }
+  .node {
+    font: 9px $sans;
   }
   map-emlo {
     .box-map {
