worked example restructured

--- a/app/views/main copy 3.html
+++ b/app/views/main copy 3.html
@@ -126,12 +126,21 @@
       </div> <!-- Close col-sm-8 -->
 
       <div class="col-sm-3">
+        <!-- <div class="room h50vh"></div> -->
         <div xxxid="ds1" class="dend-stage" xxxscroll-trigger="animateDendogram('ds1')">
           <h4>Four Communities</h4>
           <h4>–</h4>
           <p class="description">The interdisciplinarity breath of this organization is based on four different communities, within them is possible to recognize all fundamentals that are needed in order to comply to the aim of the Action.</p>
           <legend-communities></legend-communities>
         </div>
+        <!-- <div class="room h50vh"></div> -->
+        <!-- <div id="ds2" class="dend-stage" scroll-trigger="animateDendogram('ds2')">
+          <h4>Involved People</h4>
+          <h4>–</h4>
+          <p class="description">A total number of <b>164</b> people are invoved. The chart represents them divided into their belonging communities, which are the ones saw before.<br/>About three out of four people are scholars, experts in humanistic matters, while the rest of the  group is represented by Archivist, Librarians, Digital Humanist, Designers and Computer Scientist. The role of these people is to support the scholars in expressing needs and, together, to envision how to add value to their work.</p>
+          <legend-communities></legend-communities>
+        </div> -->
+        <!-- <div class="room h50vh"></div> -->
       </div> <!-- Close col-sm-4 -->
 
     </div> <!-- Close Row, dendogram-stage -->
@@ -161,6 +170,20 @@
         <p>In order to uderstand how to outline those digital tools described before, it is better, if not necessary, to gather a wide amount of specific knowledges which are nowadays scattered across a number of different skills of various field of study: since there is data to be managed, some technical capability has to be emplyed, since interfaces have to be designed and built, some method has to be called in action. The understanding of humanistic matter is nonetheless fundamental.</p><p>The challenge of this particular programme is then to coordinate them all in order to obtain the best collaboration results as possible.</p>
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="row dendogram-wg-stage">
       <div class="chart-container col-sm-9">
@@ -243,178 +266,79 @@
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Purple = comments and notes. White = placeholder text. A brief example that recap the various issues related to the field, issues, general problems and so son and so forth.</p>
+        <p>Studying the letters within the archives, a set of information have been carefully collected and some data has been produced, data that comprehend details such as date, sender, recipient, destination, origin, etc.</p>
+        <p>Those informations are the remarkable result of the meticulous reasearch work done by a number of different scholars, where the close observation of details produces interpretations that are often too accurate and too particular to be succesfully converted into a form that is easy to store and compute - and then visualisated.</p>
+        <p>This is the reason why those datasets contain variances and inconsistences; they are to be carefully managed and are not (always) to be intended as “errors” since they could give the opportunity to see intriguing new aspect on the matter (of correspondence).</p>
+        <p>This way of approaching the analysis and visualisation of data is a very uncommon one, especially if we consider the fact that has often to do with things such as standardization, automation and computation.</p>
+        <p>Dealing correctly with this kind of data-inconsistances is not a precisely straightforward task, just like is not always easy to visualise them with a set of technology that, even if it works just fine when applied to modern data, it can produce misleading pieces of visualisation when historical data is used as input.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>A Recap</h3>
+        <h3>A Misleading Visualisation</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+      <div class="col-sm-6 col-sm-offset-3">
+        <p> </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>Data Collection</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Vestibulum id ligula porta felis euismod semper. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>Issues with Data</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Donec ullamcorper nulla non metus auctor fringilla. Nullam id dolor id nibh ultricies vehicula ut id elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p>Sometimes we know about the existance of letters delivered from a particular city of origin, but the destination addresses have been lost and in some other cases it is just the opposite.</p>
-        <p>It is possible to find some examples regarding the existance of a letter without the origin but with known destination location.</p> 
-        <p>Furthermore there are even more complicated examples regarding the existance of a letters without both the origin and the destination location.</p>
-      </div>
-      <div class="col-sm-12">
-        <img class="img-responsive img-responsive-centered" src="images/missing-places.png" />
-      </div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Date could be missing or being incomplete. Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-      </div>
-      <div class="col-sm-12">
-        <img class="img-responsive img-responsive-centered" src="images/missing-dates.png" />
-      </div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Furthermore it could even happen that letters has only the day and not the month neither the year (3 cases in the dataset used in the example)</p>
-      </div>
-      <div class="col-sm-12">
-        <img class="img-responsive img-responsive-centered" src="images/missing-authors.png" />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>One Example</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Consider a portion of 582 rows of the EMLO archive, anonymized data. Consists in the 1% of the total amount of the available dataset, which is a collection of different archives.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-3">
-        <img class="img-responsive" src="images/breve-key.png" />
-        [caption]
-      </div>
-      <div class="col-sm-6">
-        <img class="img-responsive img-responsive-centered" src="images/breve-style-fake.png" />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Furthermore, the information available has a certain degree of uncertainty.</p>
-        <p>Important to take this into account while working (visualising) those records.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>One Example</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Consider a portion of 582 rows of the EMLO archive, anonymized data. Consists in the 1% of the total amount of the available dataset, which is a collection of different archives.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>Reconciliation of dates</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. NEED INFORMATION FOR BUILDING AN EXAMPLE.</p>
-        <p>Three calendars (?). Recombine all the different date notations into one common. After that we can try to visualise.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>[DEAL WITH DIFFERENT CALENDARS]</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p> NEED INFORMATION FOR BUILDING AN EXAMPLE.</p>
-        <p>Three calendars (?). Recombine all the different date notations into one common. After that we can try to visualise.</p>
-      </div>
-    </div>
-  </div> <!-- close container -->
+  </div>
 
+  <map-emlo style="width: 100%;height:768px"></map-emlo>
+
+  <div class="container"> 
+    <div class="row">
+      <div class="box-map col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <h4 class="">Title of the description box</h4>
+        <div class="legend-descr">
+          <p>The map shows routes calculated on modern roads infrastructure</p>
+        </div>
+        <div class="legend-text">
+          <p>Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+          <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        </div>
+      </div>
+    </div>  
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>The map above represents the extent of a portion of the Republic of Letters as if the letters would have travelled nowadays.</p>
+        <p>Of course, the original routes of the letters were totally different, but we do not have any way of visualising them with today’s resources and technologies.</p>
+        <p>Moreover, this example of visualisation could be seen as a very misleading one. The reason it that it assumes that the standard way of linking these places involved is overland transportation; but this is not the case.  The standard route for a letter from London to Stockholm, for instance, would not be to take the channel tunnel from Dover to Calais and then the road bridges from Germany via Denmark to Sweden: it would travel by down the Thames, up the North Sea, through the Danish Sound, and up the Baltic to Stockholm. In fact, a letter from Transylvania would typically come via Upper Hungary (Slovakia), down the Vistula to Danzig / Gdansk, and likewise via the Baltic and North Sea to London.</p>
+        <p>So mapping transportation via modern road networks is not sufficient. Compared with another kind of transportation, like the modern air routes, it could be seen, in some ways, even more misleading, precisely since no one could imaging that the latter represent the actual route taken by the letter.</p>
+        <p>Both of the cases are misleding for some reason, but it is good to experiment in order to understand what you gain and what you loose in every different attempt.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <h3>A VISUALISATION FOR INFERENCE</h3>
+      </div>
+      <div class="clearfix"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
+      <div class="clearfix"></div>
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>Because of the issues explained above, and even if a number of inconsistences are present and is not possible represent all the letters in an “equal” way or in the same view, some overview visualisation could still be remarkable for gaining some general insight.</p>
+      </div>
+    </div>
+  </div>
   <linechart-letter-distribution  style="width: 100%;height:800px;"></linechart-letter-distribution>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>[Text about the rithm of correspondence over time.]</p>
+      </div>
+    </div>
+  </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">
-        [caption]
-      </div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Duplicate letters: same letter is present in more than one catalogue..</p>
-        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Aenean eu leo quam.</p>
+        <p>Furthermore there are even more complicated examples regarding the existance of a letter without both the origin and destination location, or even without a date.<br/>To reassemble that scattered material and chart the history of that imagined community we need a revolution in digital communications.</p>
+        <p>This COST Action is dedicated to envisaging the open-access, open-source, transnational digital infrastructure capable of facilitating the radically multilateral collaboration needed to reassemble this scattered documentation and to support a new generation of scholarly methods and research questions.</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Process of letters duplication</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>Reconciliation of places names</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>What has been done to link those different namens to a univocal geo-entity.</p>
-        <p>NEED INFORMATION FOR BUILDING AN EXAMPLE.</p>
-        <p>Then we can show a map with 2 togglable layers (origins and destinations). Archs, routes?</p>
-      </div>
-    </div>
-  </div> <!-- container -->
-  <h1>BOX WITH MAPS</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        [caption]
-      </div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Then we have to consider that borders have changed and that the same town could have been part of different countries during the timespan covered by the dataset taken as example.</p>
-        <p>Needed suitable strategies for dealing with this geo issues. One possible is to go for a more abstract level of visualisation, such as a cartogram.</p>
-      </div>
-    </div>
-  </div> <!-- container -->
-  <h1>BOX WITH DORLING CARTOGRAM</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-        [caption]
-      </div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Aenean eu leo quam.</p>
-        <p>Few examples, representative. Conclusions.</p>
-      </div>
-    </div>
-  </div> <!-- container -->
-
+  </div>
 </section>
 
 <section class="container-fluid" id="section5">
